--- a/src/Components/Sidebar1/Sidebar.scss
+++ b/src/Components/Sidebar1/Sidebar.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   width: 4vw;
   height: 100%;
+  position: sticky;
 
   border-right: 2px solid var(--light-grey);
   justify-content: space-between;
